crates/rcc_driver/tests/ui/parse/missing_comma_init.stderr
Error: expected `,` or `}` in initializer list
   ╭─[ crates/rcc_driver/tests/ui/parse/missing_comma_init.c:1:14 ]
   │
 1 │ int a[] = {1 2};
   │           ┬  ─  
   │           ╰───── initializer list starts here
───╯
